# RAG_System

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/: dependencies.py
app/api/v1/: constants.py  enums.py  router.py  utils.py
app/api/v1/endpoints/: ask.py  upload.py
app/core/: config.py  llm.py  logger.py  prompts.py
app/knowledge_center/: center.py  document_reader.py  setup.py
app/routers/: rag.py
app/schemas/: ask.py  ocr.py  rag.py  upload.py
app/services/: ocr_client.py
notebooks/: Llama3_2__1B_and_3B__Conversational.ipynb  model-training-gpt-nano.ipynb
